--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
+    "json2csv": "^6.0.0-alpha.2",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
@@ -74,7 +75,8 @@
     "type-is": "^1.6.18",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
-    "vary": "^1.1.2"
+    "vary": "^1.1.2",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
